--- a/src/main/resources/templates/project_monthly_report_show.html
+++ b/src/main/resources/templates/project_monthly_report_show.html
@@ -532,7 +532,14 @@
     <script th:src="@{/js/plugins/pace/pace.min.js}"></script>
 
     <script th:src="@{/js/plugins/datapicker/bootstrap-datepicker.js}"></script>
-    <script th:src="@{/js/plugins/dataTables/datatables.min.js}"></script>
+
+  <!--  <script th:src="@{/js/plugins/dataTables/datatables.min.js}"></script>-->
+    <script th:src="@{/js/custom/jquery.dataTables1.10.16.min.js}"></script>
+    <script th:src="@{/js/custom/dataTables.buttons.js}"></script>
+    <script th:src="@{/js/custom/pdfmake.js}"></script>
+    <script th:src="@{/js/custom/vfs_fonts.js}"></script>
+    <script th:src="@{/js/custom/buttons.html5.js}"></script>
+
 
     <!-- blueimp gallery -->
     <script th:src="@{/js/plugins/blueimp/jquery.blueimp-gallery.min.js}"></script>
